<resources>
    <string name="app_name">Picturas</string>
    <string name="picturas">Picturas</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="description">Description...</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="video">Video</string>
    <string name="shop">Shop</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="take_photo">Take Photo</string>
    <string name="reel">Reel</string>
    <string name="story">Story</string>
    <string name="post">Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User name</string>
    <string name="posts">Posts</string>
</resources>